# testnet12Faucet

./: .gitignore  Cargo.toml  README.md  seeder.bat  seeder.sh
.cargo/: config.toml
src/: config.rs  main.rs  main_full.rs  rate_limiter.rs
static/: index.html
static/css/: site.css
