[package]
name = "faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }
toml = "0.8"

# Kaspa deps (use local rusty-kaspa repo, git checkout: covpp)
kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp", default-features = false }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp" }
secp256k1 = { version = "0.29.0", features = ["global-context"] }
